trunk/Archive2/49/3c87858fedf687/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:3:6: error: use of enum 'Enum' without previous declaration
 enum Enum : std::uint32_t {A = 0, B = 1};
      ^
main.cpp:3:11: error: expected unqualified-id before ':' token
 enum Enum : std::uint32_t {A = 0, B = 1};
           ^
