trunk/Archive2/49/3c87858fedf687/main.cpp
#include <cstddef>

enum Enum : std::uint32_t {A = 0, B = 1};

int main(){}
